Fixed several minor layout issues in firefox
git-svn-id: http://source.gemini.edu/software/checklists/trunk@51117 ee6ba543-07f8-4773-b02c-01d50e9d00ba

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -103,8 +103,8 @@ textarea:focus {
 }
 
 .template-buttons-area {
-    width: 85px;
-    min-width: 85px;
+    width: 90px;
+    min-width: 90px;
 }
 
 .checklist-template-name-column {
